fix background on mobile

--- a/css/mikeup.css
+++ b/css/mikeup.css
@@ -4,8 +4,7 @@ html, body {
   font-size: 100%;
   font-family: Verdana, Geneva, sans-serif;
   height: 100%;
-  min-width: 600px;
-  min-height: 500px;
+  width: 100%;
   overflow: hidden;
 }
 
@@ -58,6 +57,7 @@ html, body {
   opacity: 0;
   transition: opacity 0.5s;
   transition-delay: 0.25s;
+  background-color: black;
 }
 
 .menuItem {
@@ -134,6 +134,7 @@ html, body {
   bottom: 0;
   right: 0;
   width: 100%;
+  height: 100%;
   background-image: url("../images/myself_bw.jpg");
   background-size: cover;
 }
